# routers/router.go
@@ -1,16 +1,11 @@
 // @APIVersion 1.0.0
-// @Title beego Test API
-// @Description beego has a very cool tools to autogenerate documents for your API
-// @Contact astaxie@gmail.com
-// @TermsOfServiceUrl http://beego.me/
-// @License Apache 2.0
-// @LicenseUrl http://www.apache.org/licenses/LICENSE-2.0.html
+// @Title Agenda Test API
+// @Description API prueba para agenda.
 package routers
 
 import (
-	"github.com/udistrital/capacitacion-agenda-crud/controllers"
-
 	"github.com/astaxie/beego"
+	"github.com/udistrital/capacitacion-agenda-crud/controllers"
 )
 
 func init() {
